--- a/apps/week2/index.html
+++ b/apps/week2/index.html
@@ -5,9 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>week1</title>
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="file-uploader">
+      <div id="drop-zone">
+        <p>파일을 끌어다 놓거나 클릭하여 선택하세요.</p>
+        <input type="file" id="file-input" multiple accept="image/*">
+      </div>
+      <div id="status-zone">
+        
+      </div>
+    </div>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
