fix: 라이브러리 스크립트로 개선

--- a/apps/week2/index.html
+++ b/apps/week2/index.html
@@ -9,15 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <div id="file-uploader">
-      <div id="drop-zone">
-        <p>파일을 끌어다 놓거나 클릭하여 선택하세요.</p>
-        <input type="file" id="file-input" multiple accept="image/*">
-      </div>
-      <div id="status-zone">
-        
-      </div>
-    </div>
-    <script src="./scripts/main.js"></script>
+    <div id="file-uploader"></div>
+    <script src="./scripts/fileUploader.js"></script>
   </body>
 </html>
