feat: week2 모듈 의존 최소화를 위한 개선 작업

--- a/apps/week2/index.html
+++ b/apps/week2/index.html
@@ -7,9 +7,11 @@
     <title>week2</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/fileUploader.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <div id="file-uploader"></div>
+    <div id="drop-zone"></div>
+    <div id="status-zone"></div>
     <script src="./scripts/fileUploader.js"></script>
   </body>
 </html>
