feat: week2 업로드 상태 관련 코드를 모듈에서 분리

--- a/apps/week2/index.html
+++ b/apps/week2/index.html
@@ -13,5 +13,6 @@
     <div id="drop-zone"></div>
     <div id="status-zone"></div>
     <script src="./scripts/fileUploader.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
